--- a/index.html
+++ b/index.html
@@ -52,24 +52,24 @@
   <nav class="navbar main-font bg-dark fixed-top container-fluid">
     <div class=" justify-content-center text-start">
       <h1>
-        <a class="col-4 text-light bi-hexagon glow-button" href="#header"></a>
-        <a class="col-4 navbar-brand text-light glow-button" href="#header">T R Y P T A 9</a>
+        <a class="col-4 text-light bi-hexagon" href="#header"></a>
+        <a class="col-4 navbar-brand text-light" href="#header">T R Y P T A 9</a>
       </h1>
     </div>
   </nav>
 
 
 
-  <header class="bg-header main-font text-light container-fluid">
+  <header id="header" class="bg-header main-font text-light container-fluid">
 
     <div class="row mt-5 d-flex">
 
 
       <div class="col-md-6 col-sm-12 mt-5">
         <h4 class="text-start ms-4"><b>B O O K I N G</b></h4>
-        <div class="col-md-6 col-sm-12 card bg-dark d-flex justify-content-center">
+        <div class="col-md-6 col-sm-12 card bg-dark d-flex">
           <div class="p-1 mt-3">
-            <p class="text-start ms-4 font-killer"><i class="bi-hexagon fs-4 p-2"></i>Please complete this form</p>
+            <p class="text-start ms-4"><i class="bi-hexagon fs-4 p-2"></i>Please complete this form</p>
             <div id="input-card" class="text-start p-3 mt-2 mb-4">
               NAME
               <input type="Name" class="col-12 rounded-pill p-1">
@@ -86,8 +86,8 @@
               <input type="checkbox" class="col">
               By checking this box you agree to join our mailing list.
             </div>
-            <div class="justify-content-center p-3">
-              <button type="button" class="btn btn-secondary col-lg-6 col-md-12 col-sm-12 rounded-pill">SUMBIT</button>
+            <div class="p-3">
+              <button type="button" class="btn btn-secondary col-12 rounded-pill">SUMBIT</button>
             </div>
           </div>
         </div>
@@ -108,21 +108,35 @@
     </div>
 
     <div class="row bg-middle">
-      <div class="order-sm-1 col-md-6 col-sm-12 p-4 text-light">
-        <h1>HEADER HERE</h1>
+
+
+      <div class="stay order-lg-first order-md-first order-sm-last col-md-6 col-sm-12 p-4 text-light">
+        <h2>HEADER HERE</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis nesciunt laborum neque delectus. Odit
           laborum aperiam magnam, ipsa at vero ea accusamus aut impedit aliquam. Aperiam qui omnis molestiae dolor?
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis nesciunt laborum neque delectus. Odit
-          laborum aperiam magnam, ipsa at vero ea accusamus aut impedit aliquam. Aperiam qui omnis molestiae dolor?
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis nesciunt laborum neque delectus.
         </p>
       </div>
 
-      <div class="order-sm-2 w-50 p-4 col-md-6 col-sm-12 translate1">
-        <div class="card media2 col-sm-12 p-5 bg-dark text-light">
+
+
+      <div class="order-lg-last order-md-last order-sm-first w-50 p-2 col-md-6 col-sm-12 translate1">
+        <div class="card media2 col-8 p-5 bg-dark text-light">
           <h2>HEADER HERE</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias eveniet commodi necessitatibus adipisci
-            esse, mollitia amet eum, quo, dicta ipsum ab voluptatibus quia quaerat accusamus repellendus fuga natus
-            alias quis?</p>
+          <p>
+          <div class="p-3">
+            <i class="bi-hexagon"></i>
+            List item 1
+          </div>
+          <div class="p-3">
+            <i class="bi-hexagon"></i>
+            List item 1
+          </div>
+          <div class="p-3">
+            <i class="bi-hexagon"></i>
+            List item 1
+          </div>
+          </p>
         </div>
       </div>
 
@@ -214,7 +228,7 @@
 
     <div class="row bg-dark main-font">
 
-      <div class="col-12 order-md-1 order-sm-1 text-light p-4">
+      <div class="col-12 order-md-1 order-sm-1 text-light p-5 mb-5">
         <h1>CLOSING HEADER HERE</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, eligendi? Ut illo fugiat vel expedita non
           quas incidunt fuga quasi ea veniam suscipit repellendus eum cum, doloribus a at maiores?</p>
