--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <title>Document</title>
 
-  <style>
+  <!-- <style>
     body.debug .container,
     body.debug .container-fluid {
       outline: 2px double blue;
@@ -40,7 +40,7 @@
       outline: 2px dotted forestgreen;
       outline-offset: -3px;
     }
-  </style>
+  </style> -->
 
 </head>
 
