--- a/index.html
+++ b/index.html
@@ -189,12 +189,12 @@
 
       <div class="row justify-content-between align-items-center p-5 main-font">
 
-        <div class="card2 h-50 order-md-1 1 order-sm-2 col-md-3 col-sm-12 card p-3 bg-info">
+        <div class="card2 stay h-50 order-lg-1 order-md-1 order-sm-last col-md-3 col-sm-12 card p-3 bg-info">
           <h2 class="text-center">NAME HERE</h2>
           <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque veritatis quod .</p>
         </div>
 
-        <div class="card1 order-md-2 order-sm-1 col-md-4 col-sm-12 card bg-info">
+        <div class="card1 order-lg-2 order-md-2 order-sm-0 col-md-4 col-sm-12 card bg-info">
           <div class="d-flex justify-content-around mt-1 fs-1 p-1">
             <i class="bi-hexagon"></i><i class="bi-hexagon"></i><i class="bi-hexagon"></i>
           </div>
@@ -205,7 +205,7 @@
             maiores voluptate nisi cum. </p>
         </div>
 
-        <div class="card3 h-50 order-md-3 order-sm-3 col-md-3 col-sm-12 card p-3 bg-info">
+        <div class="card3 h-50 order-lg-3 order-md-3 order-sm-3 col-md-3 col-sm-12 card p-3 bg-info">
           <h2 class="text-center">NAME HERE</h2>
           <p class="text-center">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae, eos eveniet. </p>
         </div>
